<resources>
    <string name="app_name">NetworkingAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_main_title">Clima Popayán</string>
    <string name="string_main_temperatura">Temperatura:</string>
    <string name="string_main_humedad">Humedad</string>
    <string name="string_main_pronostico">Pronóstico</string>
    <string name="string_main_button">Refrescar datos</string>
</resources>
