<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:stretchColumns="*">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_main_title"
        android:text="@string/string_main_title"/>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_main_temperatura"
            android:layout_gravity="right"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/temperatura"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_main_humedad"
            android:layout_gravity="right"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/humedad"/>
    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Presión"
            android:layout_gravity="right"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/presion"/>
    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_main_pronostico"
            android:layout_gravity="right"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/pronostico"/>
    </TableRow>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_main_button"
        android:id="@+id/refrescar"/>
</TableLayout>
